--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,10 +141,11 @@ desktop-large: 1440px
 
 #recipe-form__search-icon {
   position: absolute;
-  top: 4.5rem;
+  top: 4.3rem;
   left: 1rem;
   width: 1.6rem;
   color: #015a06;
+  font-size: 1.6rem;
 }
 
 @media (min-width: 30rem) {
@@ -155,7 +156,7 @@ desktop-large: 1440px
 
 @media (min-width: 64rem) {
   #recipe-form__search-icon {
-    left: 10.5rem;
+    left: 10rem;
   }
 }
 
@@ -167,12 +168,13 @@ desktop-large: 1440px
 
 #recipe-form__clear-icon {
   position: absolute;
-  top: 4.5rem;
-  right: 0.5rem;
+  top: 4.3rem;
+  right: 1rem;
   width: 1.6rem;
   cursor: pointer;
   color: #015a06;
   visibility: hidden;
+  font-size: 1.6rem;
 }
 
 @media (min-width: 30rem) {
